# minipath

./: .gitignore  .gitmodules  Cargo.toml
.cargo/: config.toml
benches/: render_teapot.rs
data/: Readme.md
proptest-regressions/: bvh.txt  image_block.txt  parallel_for_each.txt  screen_block.txt
proptest-regressions/bvh/: compressed_geometry.txt  mod.txt
proptest-regressions/scene/triangle_bvh/: mod.txt
proptest-regressions/util/: simba.txt
src/: camera.rs  cli.rs  geometry.rs  gui.rs  image_block.rs  image_buffer.rs  image_file_buffer.rs  image_window.rs  lib.rs  main.rs  parallel_for_each.rs  renderer.rs  scene.rs  screen_block.rs  util.rs
src/geometry/: aabb.rs  mod.rs  ray_box_intersection.rs  ray_triangle_intersection.rs  triangle.rs
src/renderer/: machinery.rs  mod.rs  worker.rs
src/scene/: mod.rs  primitives.rs
src/scene/triangle_bvh/: building.rs  compressed_geometry.rs  mod.rs  printing.rs  ray_bvh_intersection.rs
src/util/: mod.rs  simba.rs  stats.rs
