[package]
name = "minipath"
version = "0.1.0"
authors = ["Kuba Marek <blue.cube@seznam.cz>"]
description = "Toy path tracer, focused more on the toy part, than the path tracer part"
edition = "2018"

[features]
default = ["gui"]
gui = ["sdl2"]

[dependencies]
euclid = "0.20.7"
image = "0.23.0"
rand = { version = "0.7.3", features = ["small_rng"]}
rand_distr = "0.2.2"
sdl2 = { version = "0.33.0", optional = true }
rgb = "0.8.16"
parking_lot = "0.10.0"

crossbeam-utils = "0.7.2"
num_cpus = "1.12.0"
scopeguard = "1.1.0"

[dev-dependencies]
proptest = "0.9.5"
proptest-attr-macro = "0.1.0"
panic-control = "0.1.4"
tempfile = "3.1.0"
assert2 = "0.1.2"
