[package]
name = "minipath"
version = "0.2.0"
authors = ["Kuba Marek <blue.cube@seznam.cz>"]
description = "Toy path tracer, focused more on the toy part, than the path tracer part"
edition = "2024"

[lib]
name = "minipath"

[[bin]]
name = "minipath-gui"
path = "src/gui.rs"

[dependencies]
euclid = "0.22.11"
image = "0.25.6"
rand = { version = "0.9.1", features = ["small_rng"]}
rand_distr = "0.5.1"
rgb = "0.8.50"
num_cpus = "1.16.0"
anyhow = "1.0.98"
test-strategy = "0.4.1"
core_affinity = "0.8.3"
ordered-float = "5.0.0"
egui = "0.31.1"
eframe = "0.31.1"

[dev-dependencies]
proptest = "1.6.0"
assert2 = "0.3.15"
test-strategy = "0.4.1"
