[package]
name = "minipath"
version = "0.2.0"
authors = ["Kuba Marek <blue.cube@seznam.cz>"]
description = "Toy path tracer, focused more on the toy part, than the path tracer part"
edition = "2024"

[lib]
name = "minipath"

[[bin]]
name = "minipath-gui"
path = "src/gui.rs"

[[bench]]
name = "render_teapot"
harness = false

[dependencies]
image = "0.25.6"
rand = { version = "0.9.1", features = ["small_rng"]}
rand_distr = "0.5.1"
rgb = "0.8.50"
num_cpus = "1.16.0"
anyhow = "1.0.98"
test-strategy = "0.4.1"
core_affinity = "0.8.3"
ordered-float = "5.0.0"
egui = "0.31.1"
eframe = "0.31.1"
wide = "0.7.32"
wavefront_obj = "11.0.0"
assert2 = "0.3.15"
nalgebra = "0.33.2"
num-traits = "0.2.19"
#simba = { version = "0.9.0", features = ["wide"] }
simba = { git = "https://github.com/bluecube/simba.git", branch = "widebool_any_all_none", features = ["wide"] }
morton-encoding = "2.0.1"
itertools = "0.14.0"
thiserror = "2.0.12"
indexmap = "2.9.0"
index_vec = "0.1.4"

[dev-dependencies]
proptest = "1.6.0"
test-strategy = "0.4.1"
test-case = "3.3.1"
criterion = { version = "0.6.0", features = ["html_reports"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
debug = "line-tables-only"
